<resources>
    <string name="app_name" translatable="false">AID</string>
    <string name="copyright_fr3ts0n" translatable="false">© 2015-2020 fr3ts0n</string>
    <string name="translation_credits">Translation by fr3ts0n</string>
    <string name="app_description">Android OBD vehicle diagnostics app for ELM327 Bluetooth adapter</string>
    <string name="title_connecting">Connecting…</string>
    <string name="title_connected_to">Connected %s</string>
    <string name="logo">Logo</string>
    <string name="back_again_to_exit">Press back again to close this app</string>
    <string name="action_connect">Connect</string>
    <string name="obd_none">NO service</string>
    <string name="obd_services">OBD Services</string>
    <string name="obd_veh_info">OBD Vehicle Info</string>
    <string name="obd_data">OBD Data</string>
    <string name="service_freezeframes">OBD Freeze Frames</string>
    <string name="obd_codes">OBD fault codes</string>
    <string name="obd_permanentcodes">OBD fault codes (permanent)</string>
    <string name="obd_pendingcodes">OBD fault codes (pending)</string>
    <string name="obd_clearcodes">Clear fault codes</string>
    <string name="obd_clear_info">
This will reset the MIL and clear all emission-related diagnostic\n
information, including:\n
 - Diagnostic trouble codes\n
 - Freeze frame data\n
 - Oxygen sensor test data\n
 - Status of system monitoring tests\n
 - On-board monitoring tests results\n
 - Distance travelled while MIL activated\n
 - Number of warm-ups since DTCs cleared\n
 - Distance travelled since DTCs cleared\n
 - Engine run time while MIL activated\n
 - Time since DTCs cleared\n\n
Other manufacturer specific clearing/resetting actions may occur.\n
The loss of data may cause the vehicle to run poorly for a short \n
period of time while the ECU recalibrates itself.
     </string>
    <string name="select_device">Select adapter</string>
    <string name="none_paired">No Devices Paired</string>
    <string name="none_found">No Devices Found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="send_to">Send to</string>
    <string name="share">share</string>
    <string name="time">Time [s]</string>
    <string name="chart">Chart</string>
    <string name="demo_stopped">DEMO mode stopped</string>
    <string name="demo_started">DEMO mode started</string>
    <string name="snapshot">snapshot</string>
    <string name="save">Save measurement</string>
    <string name="load">Load measurement</string>
    <string name="saved_data">Saved Data</string>
    <string name="loaded">loaded</string>
    <string name="saved">saved</string>
    <string name="connected_to">"Connected to "</string>
    <string name="demo">Demo…</string>
    <string name="saving_data">Saving data …</string>
    <string name="loading_data">Loading data …</string>
    <string name="dashboard">Dashboard</string>
    <string name="hud">Head Up Display</string>
    <string name="filter">Filter selected</string>
    <string name="settings">Settings</string>
    <string name="common_settings">Common settings</string>
    <string name="measure_system_description">Measurement units system (metric / imperial)</string>
    <string name="measure_system">Measurement units</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string-array name="measure_options" translatable="false">
        <item>@string/metric</item>
        <item>@string/imperial</item>
    </string-array>
    <string-array name="measure_option_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="items_for_display">Data items to display</string>
    <string name="items_for_display_descr">Select all data items to be displayed …</string>
    <string-array name="empty" translatable="false" />
    <string name="debugging">Debugging</string>
    <string name="logging_level">Logging level</string>
    <string name="logging_level_description">Level of details to be logged into debug log file</string>
    <string-array name="logging_options" translatable="false">
        <item>OFF</item>
        <item>SEVERE</item>
        <item>WARNING</item>
        <item>INFO</item>
        <item>CONFIG</item>
        <item>FINE</item>
        <item>FINER</item>
        <item>FINEST</item>
        <item>ALL</item>
    </string-array>
    <string-array name="restore_keys" translatable="false">
        <item>LAST_DEV_ADDRESS</item>
        <item>LAST_ECU_ADDRESS</item>
        <item>LAST_SERVICE</item>
        <item>LAST_ITEMS</item>
        <item>LAST_VIEW_MODE</item>
    </string-array>
    <string-array name="restore_options" translatable="false">
        <item>@string/last_elm</item>
        <item>@string/last_ecu</item>
        <item>@string/last_service</item>
        <item>@string/last_data_items</item>
        <item>@string/last_view_mode</item>
    </string-array>
    <string name="last_elm">re-connect last ELM-adapter</string>
    <string name="last_ecu">re-connect last ECU</string>
    <string name="last_service">last OBD service</string>
    <string name="last_data_items">last selected data items</string>
    <string name="last_view_mode">last data view mode</string>
    <string name="keep_screen_on">Keep main screen on</string>
    <string name="keep_screen_on_description">Do not turn OFF screen if main/data screen is on display</string>
    <string name="development_options">Development options</string>
    <string name="dev_opt_description">Options for debugging and customisation</string>
    <string name="extension_files">Protocol customisation files (CSV)</string>
    <string name="conversions">Data Conversions</string>
    <string name="data_items">Data items</string>
    <string name="select_extension">Select .csv extension file …</string>
    <string name="extension_loading">Customisation loading</string>
    <string name="check_cust_settings">Please check your customisation settings\n</string>
    <string name="obd_options">OBD options </string>
    <string name="obd_opt_description">Options for OBD protocol / vehicle communication </string>
    <string name="select_protocol">Preferred OBD protocol </string>
    <string name="plugin_manager">Plugin manager</string>
    <string name="configure">Configure</string>
    <string name="select_fault_code">Select fault code …</string>
    <string name="select_medium">Adapter type …</string>
    <string name="devices_found">%d USB device(s) found</string>
    <string name="min_elm_timeout">Min. ELM timeout [ms]</string>
    <string name="unabletoconnect">Unable to connect device</string>
    <string name="connectionlost">Device connection was lost</string>
    <string name="elm_timeout_descr">Minimum timeout in [ms] to wait for ELM responses</string>
    <string name="day_night_mode">Day/Night view mode</string>
    <string name="night_mode_description">Set display to dark background</string>
    <string name="night_mode">Night mode</string>
    <string name="disable_elm_cmds">Disabled ELM commands</string>
    <string name="disable_elm_cmds_descr">enable/disable ELM commands</string>
    <string name="elm_adaptive_timing">ELM adaptive timing</string>
    <string name="elm_adaptive_timing_descr">Allow adaptive timing handling in ELM drivers?</string>
    <string name="elm_reset_on_nrc">Reset on NRC</string>
    <string name="elm_reset_on_nrc_descr">Reset ELM adapter on NRC error?</string>
    <string name="select_ecu_addr">Select ECU address …</string>
    <string name="disconnect">Disconnect</string>
    <string name="reset_preselections">Reset last pre-selections</string>
    <string name="use_last_settings_description">Use last settings at startup (BT address, ECU address, Display items …)</string>
    <string name="use_last_settings">Use last settings</string>
    <string name="common_settings_description">Common settings for app control</string>
    <string name="secure_connect">Secure connection</string>
    <string name="secure_connect_description">Use encrypted Bluetooth connection</string>
    <string name="elm_options">ELM options</string>
    <string name="elm_custom_init">ELM custom init</string>
    <string name="elm_custom_init_descr">ELM custom initialisation commands</string>
    <string name="UNDEFINED">Undefined</string>
    <string name="INITIALIZING">Initializing…</string>
    <string name="INITIALIZED">Initialized</string>
    <string name="ECU_DETECT">ECU detect…</string>
    <string name="ECU_DETECTED">ECU detected</string>
    <string name="CONNECTING">Connecting…</string>
    <string name="CONNECTED">Connected</string>
    <string name="NODATA">No data</string>
    <string name="STOPPED">Stopped</string>
    <string name="DISCONNECTED">Disconnected</string>
    <string name="BUSERROR">BUS error</string>
    <string name="DATAERROR">DATA error</string>
    <string name="RXERROR">RX error</string>
    <string name="ERROR">Error</string>
    <string name="obd_error">OBD protocol error</string>
    <string name="device_address_description">ELM device network IP address</string>
    <string name="device_address">ELM IP address</string>
    <string name="device_port_description">ELM device network IP port</string>
    <string name="device_port">ELM IP port</string>
    <string name="data_disable_max">Data item disable limit</string>
    <string name="data_disable_max_description">Number of invalid consecutive data responses before item will be disabled</string>
    <string name="autohide_toolbar">Hide toolbar</string>
    <string name="autohide_toolbar_description">Automatically hide toolbar after delay w/o activity</string>
    <string name="autohide_delay">Hide toolbar delay [s]</string>
    <string name="autohide_delay_description">Delay in seconds w/o activity, before Toolbar is hidden</string>
    <string-array name="elmcomm_states" translatable="false">
        <item>@string/UNDEFINED</item>
        <item>@string/INITIALIZING</item>
        <item>@string/INITIALIZED</item>
        <item>@string/ECU_DETECT</item>
        <item>@string/ECU_DETECTED</item>
        <item>@string/CONNECTING</item>
        <item>@string/CONNECTED</item>
        <item>@string/NODATA</item>
        <item>@string/STOPPED</item>
        <item>@string/DISCONNECTED</item>
        <item>@string/BUSERROR</item>
        <item>@string/DATAERROR</item>
        <item>@string/RXERROR</item>
        <item>@string/ERROR</item>
    </string-array>
    <string name="csv_export_options">CSV export options</string>
    <string name="csv_export_description">Options for formatting CSV export files</string>
    <string name="csv_field_delimiter">CSV field delimiter</string>
    <string name="csv_field_delimiter_description">Delimiter character(s) between CSV data fields</string>
    <string name="csv_rec_delimiter">CSV record delimiter</string>
    <string name="csv_rec_delimiter_description">Delimiter character(s) between CSV data records</string>
    <string name="csv_text_quoted">CSV text quoted</string>
    <string name="csv_text_quoted_description">CSV text fields are included within quotes</string>
    <string name="tab">TAB</string>
    <string name="comma">COMMA</string>
    <string name="semicolon">SEMICOLON</string>
    <string name="toolbar_overlay">Show as overlay</string>
    <string name="toolbar_overlay_sum">Show toolbar overlapping main screen</string>
    <string name="comm_baudrate">ELM baud rate</string>
    <string name="comm_baudrate_description">USB serial communication speed</string>
    <string name="plugin_settings" translatable="false">Plugin settings</string>
    <string name="update_period" translatable="false">Update period</string>
    <string name="update_period_sum" translatable="false">Time [seconds] between data updates on Car</string>
    <string name="data_items_sum" translatable="false">Select data items to be shown on Android Auto</string>
</resources>