<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:icon="@android:drawable/ic_menu_manage"
                  android:title="@string/settings">

    <PreferenceScreen
        android:icon="@android:drawable/ic_menu_manage"
        android:summary="@string/common_settings_description"
        android:title="@string/common_settings">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="keep_screen_on"
            android:summary="@string/keep_screen_on_description"
            android:title="@string/keep_screen_on"
            />

        <PreferenceCategory
            android:title="@string/autohide_toolbar">

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="autohide_toolbar"
                android:summary="@string/autohide_toolbar_description"
                android:title="@string/autohide_toolbar"
                />

            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="autohide_toolbar"
                android:key="toolbar_overlay"
                android:summary="@string/toolbar_overlay_sum"
                android:title="@string/toolbar_overlay"
                />

            <EditTextPreference
                android:defaultValue="15"
                android:dependency="autohide_toolbar"
                android:inputType="numberDecimal"
                android:key="autohide_delay"
                android:summary="@string/autohide_delay_description"
                android:title="@string/autohide_delay"
                />

        </PreferenceCategory>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="night_mode"
            android:summary="@string/night_mode_description"
            android:title="@string/night_mode"
            />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/measure_system"
            android:entries="@array/measure_options"
            android:entryValues="@array/measure_option_values"
            android:key="measure_system"
            android:summary="@string/measure_system_description"
            android:title="@string/measure_system"
            />

    </PreferenceScreen>


    <PreferenceScreen
        android:icon="@android:drawable/ic_menu_manage"
        android:summary="@string/obd_opt_description"
        android:title="@string/obd_options">

        <PreferenceCategory
            android:title="@string/obd_options">

            <ListPreference
                android:defaultValue="0"
                android:dialogTitle="@string/select_medium"
                android:entries="@array/empty"
                android:entryValues="@array/empty"
                android:key="comm_medium"
                android:title="@string/select_medium"
                />

            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="comm_medium"
                android:key="bt_secure_connection"
                android:summary="@string/secure_connect_description"
                android:title="@string/secure_connect"
                />

            <EditTextPreference
                android:capitalize="characters"
                android:defaultValue="192.168.0.10"
                android:inputType="textUri"
                android:key="device_address"
                android:summary="@string/device_address_description"
                android:title="@string/device_address"
                />

            <EditTextPreference
                android:capitalize="characters"
                android:defaultValue="35000"
                android:inputType="number"
                android:key="device_port"
                android:summary="@string/device_port_description"
                android:title="@string/device_port"
                />

            <ListPreference
                android:defaultValue="38400"
                android:dialogTitle="@string/comm_baudrate"
                android:entries="@array/baud_rates"
                android:entryValues="@array/baud_rates"
                android:key="comm_baudrate"
                android:title="@string/comm_baudrate"
                android:summary="@string/comm_baudrate_description"
                />

            <MultiSelectListPreference
                android:defaultValue="@array/empty"
                android:dialogTitle="@string/items_for_display"
                android:entries="@array/empty"
                android:entryValues="@array/empty"
                android:key="data_items"
                android:summary="@string/items_for_display_descr"
                android:title="@string/items_for_display"
                />

        </PreferenceCategory>

    </PreferenceScreen>



</PreferenceScreen>
