<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:layout_marginTop="20dp"
        android:layout="@layout/logo_layout" />


    <PreferenceCategory
        android:key="plugin_settings"
        android:title="@string/plugin_settings">

        <MultiSelectListPreference
            android:key="data_items"
            android:summary="@string/data_items_sum"
            android:title="@string/data_items"/>

        <EditTextPreference
            android:defaultValue="30"
            android:key="update_period"
            android:inputType="number"
            android:summary="@string/update_period_sum"
            android:title="@string/update_period"/>



    </PreferenceCategory>

</PreferenceScreen>